--- a/TP5/docs/04-simulaciones.tex
+++ b/TP5/docs/04-simulaciones.tex
@@ -3,16 +3,16 @@
     \begin{block}{Parámetros fijos}
         \begin{itemize}
             \item Dimensiones de la cancha - 100\ m x 70\ m\)
-            \item Velocidad máxima de los jugadores azules - \(v_{azul}^{max} = 3.8\ m/s\)
-            \item Constantes de reacción - \(\tau_{azul} = 0.5\ s\), \(\tau_{rojo} = 0.3\ s\)
+            \item Velocidad máxima de los defensores - \(v_{def}^{max} = 3.8\ m/s\)
+            \item Constantes de reacción - \(\tau_{def} = 0.5\ s\), \(\tau_{at} = 0.3\ s\)
             \item Intervalo de radio de los jugadores - \(r \in [0.15, 0.32]\)
             \item Exponente Beta - \(\beta = 0.9\)
         \end{itemize}
     \end{block}
     \begin{block}{Parámetros variables}
         \begin{itemize}
-            \item Cantidad de jugadores azules - \(N_j\)
-            \item Velocidad máxima del jugador rojo - \(v_{rojo}^{max}\)
+            \item Cantidad de defensores - \(N_j\)
+            \item Velocidad máxima del atacante - \(v_{at}^{max}\)
             \item Coeficientes de CPM modificado - \(A_p\), \(B_p\)
         \end{itemize}
     \end{block}
@@ -33,8 +33,8 @@
         \textbf{Consideraciones:}
         \begin{itemize}
             \item Se realizan 100 repeticiones por cada configuración.
-            \item La posición inicial de los jugadores azules es uniformemente distribuida.
-            \item La posición inicial del jugador rojo es fija, en el otro extremo de la cancha.
+            \item La posición inicial de los defensores es uniformemente distribuida.
+            \item La posición inicial del atacante es fija, en el otro extremo de la cancha.
         \end{itemize}
     }
 
