--- a/TP5/docs/04-simulaciones.tex
+++ b/TP5/docs/04-simulaciones.tex
@@ -45,7 +45,7 @@
     \begin{block}{Distancia maxima recorrida en el eje x}
         Distancia máxima recorrida en la dirección x, promediada para todas las realizaciones.
         \begin{equation*}
-            <|x - 100|>
+            D_{x}^{Max} = <|x - 100|>
         \end{equation*}
     \end{block}
     \begin{block}{Fracción de try logrados}
