--- a/TP5/docs/05-resultados.tex
+++ b/TP5/docs/05-resultados.tex
@@ -5,3 +5,71 @@
         \includegraphics[width=0.9\textwidth]{pic/05-resultados/animation-preview}
     \end{center}
 \end{frame}
+
+\begin{frame}{...}
+    \begin{center}
+        \includegraphics[width=\textwidth]{pic/05-resultados/r1}
+    \end{center}
+\end{frame}
+
+\begin{frame}{...}
+    \begin{center}
+        \includegraphics[width=\textwidth]{pic/05-resultados/r2}
+    \end{center}
+\end{frame}
+
+\begin{frame}{...}
+    \begin{center}
+        \includegraphics[width=\textwidth]{pic/05-resultados/r3}
+        \includegraphics[width=\textwidth]{pic/05-resultados/r4}
+    \end{center}
+\end{frame}
+
+
+\begin{frame}{...}
+    \begin{center}
+        \includegraphics[width=0.75\textwidth]{pic/05-resultados/r5}
+    \end{center}
+\end{frame}
+
+\begin{frame}{...}
+    \begin{center}
+        \includegraphics[width=0.75\textwidth]{pic/05-resultados/r6}
+    \end{center}
+\end{frame}
+
+\begin{frame}{...}
+    \begin{center}
+        \includegraphics[width=0.75\textwidth]{pic/05-resultados/r7}
+    \end{center}
+\end{frame}
+
+\begin{frame}{...}
+    \begin{center}
+        \includegraphics[width=0.75\textwidth]{pic/05-resultados/r8}
+    \end{center}
+\end{frame}
+
+\begin{frame}{...}
+    \begin{center}
+        \includegraphics[width=0.75\textwidth]{pic/05-resultados/r9}
+    \end{center}
+\end{frame}
+
+\begin{frame}{...}
+    \begin{center}
+        \includegraphics[width=0.75\textwidth]{pic/05-resultados/r10}
+    \end{center}
+\end{frame}
+
+\begin{frame}{...}
+    \begin{center}
+        \includegraphics[width=0.75\textwidth]{pic/05-resultados/r11}
+    \end{center}
+\end{frame}
+
+\begin{frame}{...}
+    \begin{center}
+        \includegraphics[width=0.75\textwidth]{pic/05-resultados/r12}
+    \end{center}
+\end{frame}
