--- a/TP5/docs/05-resultados.tex
+++ b/TP5/docs/05-resultados.tex
@@ -1,75 +1,224 @@
 \section{Resultados}\label{sec:resultados}
 
-\begin{frame}
+\begin{frame}{Animación de la simulación}
     \begin{center}
-        \includegraphics[width=0.9\textwidth]{pic/05-resultados/animation-preview}
+        \begin{minipage}[c]{0.15\textwidth}
+            \begin{equation*}
+                \begin{aligned}
+                    A_p &= 36 \\
+                    B_p &= 1.5\ m \\
+                    N_j &= 15 \\
+                    v_{at}^{max} &= 4\ m/s
+                \end{aligned}
+            \end{equation*}
+        \end{minipage}
+        \hfill
+        \begin{minipage}[c]{0.80\textwidth}
+            \includegraphics[width=0.9\textwidth]{pic/05-resultados/animation-preview}
+            \tiny{\href{https://youtu.be/uHmFrLeU3-g}{https://youtu.be/uHmFrLeU3-g}}
+        \end{minipage}
     \end{center}
 \end{frame}
 
-\begin{frame}{...}
+\begin{frame}{Análisis de los coeficientes de CPM modificado}
     \begin{center}
-        \includegraphics[width=\textwidth]{pic/05-resultados/r1}
+        \begin{minipage}[c]{0.15\textwidth}
+            \begin{equation*}
+                \begin{aligned}
+                    N_j &= 15 \\
+                    v_{at}^{max} &= 4\ m/s
+                \end{aligned}
+            \end{equation*}
+        \end{minipage}
+        \hfill
+        \begin{minipage}[c]{0.80\textwidth}
+            \includegraphics[width=1.1\textwidth]{pic/05-resultados/r1}
+        \end{minipage}
     \end{center}
+    \vfill
+    \footnotesize{\text{Se realizaron 100 repeticiones por cada configuración.}}
 \end{frame}
 
-\begin{frame}{...}
+\begin{frame}{Análisis de los coeficientes de CPM modificado}
     \begin{center}
-        \includegraphics[width=\textwidth]{pic/05-resultados/r2}
+        \begin{minipage}[c]{0.15\textwidth}
+            \begin{equation*}
+                \begin{aligned}
+                    N_j &= 15 \\
+                    v_{at}^{max} &= 4\ m/s
+                \end{aligned}
+            \end{equation*}
+        \end{minipage}
+        \hfill
+        \begin{minipage}[c]{0.80\textwidth}
+            \includegraphics[width=1.1\textwidth]{pic/05-resultados/r2}
+        \end{minipage}
     \end{center}
+    \vfill
+    \footnotesize{\text{Se realizaron 100 repeticiones por cada configuración.}}
 \end{frame}
 
-\begin{frame}{...}
+\begin{frame}{Análisis de los coeficientes de CPM modificado}
     \begin{center}
-        \includegraphics[width=\textwidth]{pic/05-resultados/r3}
-        \includegraphics[width=\textwidth]{pic/05-resultados/r4}
+        \begin{minipage}[c]{0.15\textwidth}
+            \begin{equation*}
+                \begin{aligned}
+                    N_j &= 15 \\
+                    v_{at}^{max} &= 4\ m/s
+                \end{aligned}
+            \end{equation*}
+        \end{minipage}
+        \hfill
+        \begin{minipage}[c]{0.75\textwidth}
+            \includegraphics[width=1.1\textwidth]{pic/05-resultados/r3}
+            \includegraphics[width=1.1\textwidth]{pic/05-resultados/r4}
+        \end{minipage}
     \end{center}
+    \vfill
+    \footnotesize{\text{Se realizaron 100 repeticiones por cada configuración.}}
 \end{frame}
 
 
-\begin{frame}{...}
+\begin{frame}{Análisis de los coeficientes de CPM modificado}
     \begin{center}
-        \includegraphics[width=0.75\textwidth]{pic/05-resultados/r5}
+        \begin{minipage}{0.15\textwidth}
+            \begin{equation*}
+                \begin{aligned}
+                    B_p &= 1.5\ m \\
+                    N_j &= 15 \\
+                    v_{at}^{max} &= 4\ m/s
+                \end{aligned}
+            \end{equation*}
+        \end{minipage}
+        \begin{minipage}{0.80\textwidth}
+            \hfill\includegraphics[width=0.85\textwidth]{pic/05-resultados/r5}
+        \end{minipage}
     \end{center}
+    \footnotesize{\text{Se realizaron 1000 repeticiones por cada configuración.}}
 \end{frame}
 
-\begin{frame}{...}
+\begin{frame}{Análisis de los coeficientes de CPM modificado}
     \begin{center}
-        \includegraphics[width=0.75\textwidth]{pic/05-resultados/r6}
+        \begin{minipage}{0.15\textwidth}
+            \begin{equation*}
+                \begin{aligned}
+                    B_p &= 1.5\ m \\
+                    N_j &= 15 \\
+                    v_{at}^{max} &= 4\ m/s
+                \end{aligned}
+            \end{equation*}
+        \end{minipage}
+        \begin{minipage}{0.80\textwidth}
+            \hfill\includegraphics[width=0.85\textwidth]{pic/05-resultados/r6}
+        \end{minipage}
     \end{center}
+    \footnotesize{\text{Se realizaron 1000 repeticiones por cada configuración.}}
 \end{frame}
 
-\begin{frame}{...}
+\begin{frame}{Análisis de los coeficientes de CPM modificado}
     \begin{center}
-        \includegraphics[width=0.75\textwidth]{pic/05-resultados/r7}
+        \begin{minipage}{0.15\textwidth}
+            \begin{equation*}
+                \begin{aligned}
+                    A_p &= 36 \\
+                    N_j &= 15 \\
+                    v_{at}^{max} &= 4\ m/s
+                \end{aligned}
+            \end{equation*}
+        \end{minipage}
+        \begin{minipage}{0.80\textwidth}
+            \hfill\includegraphics[width=0.85\textwidth]{pic/05-resultados/r7}
+        \end{minipage}
     \end{center}
+    \footnotesize{\text{Se realizaron 1000 repeticiones por cada configuración.}}
 \end{frame}
 
-\begin{frame}{...}
+\begin{frame}{Análisis de los coeficientes de CPM modificado}
     \begin{center}
-        \includegraphics[width=0.75\textwidth]{pic/05-resultados/r8}
+        \begin{minipage}{0.15\textwidth}
+            \begin{equation*}
+                \begin{aligned}
+                    A_p &= 36 \\
+                    N_j &= 15 \\
+                    v_{at}^{max} &= 4\ m/s
+                \end{aligned}
+            \end{equation*}
+        \end{minipage}
+        \begin{minipage}{0.80\textwidth}
+            \hfill\includegraphics[width=0.85\textwidth]{pic/05-resultados/r8}
+        \end{minipage}
     \end{center}
+    \footnotesize{\text{Se realizaron 1000 repeticiones por cada configuración.}}
 \end{frame}
 
-\begin{frame}{...}
+\begin{frame}{Observable: Fracción de try logrados}
     \begin{center}
-        \includegraphics[width=0.75\textwidth]{pic/05-resultados/r9}
+        \begin{minipage}{0.15\textwidth}
+            \begin{equation*}
+                \begin{aligned}
+                    A_p &= 36 \\
+                    B_p &= 1.5\ m \\
+                    v_{at}^{max} &= 4\ m/s
+                \end{aligned}
+            \end{equation*}
+        \end{minipage}
+        \begin{minipage}{0.80\textwidth}
+            \hfill\includegraphics[width=0.85\textwidth]{pic/05-resultados/r9}
+        \end{minipage}
     \end{center}
+    \footnotesize{\text{Se realizaron 1000 repeticiones por cada configuración.}}
 \end{frame}
 
-\begin{frame}{...}
+\begin{frame}{Observable: Distancia máxima recorrida promedio en el eje x}
     \begin{center}
-        \includegraphics[width=0.75\textwidth]{pic/05-resultados/r10}
+        \begin{minipage}{0.15\textwidth}
+            \begin{equation*}
+                \begin{aligned}
+                    A_p &= 36 \\
+                    B_p &= 1.5\ m \\
+                    v_{at}^{max} &= 4\ m/s
+                \end{aligned}
+            \end{equation*}
+        \end{minipage}
+        \begin{minipage}{0.80\textwidth}
+            \hfill\includegraphics[width=0.85\textwidth]{pic/05-resultados/r10}
+        \end{minipage}
     \end{center}
+    \footnotesize{\text{Se realizaron 1000 repeticiones por cada configuración.}}
 \end{frame}
 
-\begin{frame}{...}
+\begin{frame}{Variando la velocidad máxima del atacante}
     \begin{center}
-        \includegraphics[width=0.75\textwidth]{pic/05-resultados/r11}
+        \begin{minipage}{0.15\textwidth}
+            \begin{equation*}
+                \begin{aligned}
+                    A_p &= 36 \\
+                    B_p &= 1.5\ m \\
+                    N_j &= 100
+                \end{aligned}
+            \end{equation*}
+        \end{minipage}
+        \begin{minipage}{0.80\textwidth}
+            \hfill\includegraphics[width=0.85\textwidth]{pic/05-resultados/r11}
+        \end{minipage}
     \end{center}
+    \footnotesize{\text{Se realizaron 1000 repeticiones por cada configuración.}}
 \end{frame}
 
-\begin{frame}{...}
+\begin{frame}{Variando la velocidad máxima del atacante}
     \begin{center}
-        \includegraphics[width=0.75\textwidth]{pic/05-resultados/r12}
+        \begin{minipage}{0.15\textwidth}
+            \begin{equation*}
+                \begin{aligned}
+                    A_p &= 36 \\
+                    B_p &= 1.5\ m \\
+                    N_j &= 100
+                \end{aligned}
+            \end{equation*}
+        \end{minipage}
+        \begin{minipage}{0.80\textwidth}
+            \hfill\includegraphics[width=0.85\textwidth]{pic/05-resultados/r12}
+        \end{minipage}
     \end{center}
+    \footnotesize{\text{Se realizaron 1000 repeticiones por cada configuración.}}
 \end{frame}
