--- a/TP5/docs/06-conclusiones.tex
+++ b/TP5/docs/06-conclusiones.tex
@@ -1,10 +1,11 @@
 \section{Conclusiones}\label{sec:conclusiones}
 
 \begin{frame}{Conclusiones}
-
-    \begin{itemize}
-        \item
-
-    \end{itemize}
-
+    \Large{
+        \begin{itemize}
+            \item A partir de cierto mínimo, el valor del coeficiente $A_p$ es irrelevante para la simulación.
+            \item El valor del coeficiente $B_p$ influye en los resultados de $\Phi t$ y $D_x^{max}$.
+            \item A menor $N_j$ o mayor $v_{at}^{max}$, $\Phi t$ y $D_x^{max}$ aumentan considerablemente.
+        \end{itemize}
+    }
 \end{frame}
